css/main.css
/* ... */
@media only screen and (max-width: 768px) {
  #resume .timeline-wrap::before {
    left: 2.4rem;
  }
  #resume .timeline-ico {
    left: 2.4rem;
  }
  #resume .timeline-header {
    float: none;
    width: auto;
    padding-right: 15px;
    text-align: left;
  }
  #resume .timeline-header h3 {
    font-size: 2rem;
  }
  #resume .timeline-header p {
    font-size: 1.5rem;
    margin-bottom: 1.5rem;
  }
  #resume .timeline-content {
    margin: 0;
  }
  #resume .timeline-content h4 {
    padding-bottom: 0;
    padding-top: 2.1rem;
    margin-bottom: 0.6rem;
    font-size: 1.7rem;
  }
  #resume .timeline-content h4::after {
    bottom: auto;
    top: 0;
  }
  #resume .timeline-header,
  #resume .timeline-content {
    padding-left: 7rem;
  }
}
@media only screen and (max-width: 480px) {
  #resume .resume-header h2 {
    font-size: 2.2rem;
  }
  #resume .timeline-wrap::before {
    left: 1.8rem;
  }
  #resume .timeline-ico {
    height: 3.6rem;
    width: 3.6rem;
    line-height: 3.6rem;
    left: 1.8rem;
    margin-left: -1.8rem;
    font-size: 1.5rem;
  }
  #resume .timeline-header,
  #resume .timeline-content {
    padding-left: 5.5rem;
  }
}

/** 
 * ===================================================================
 * 13. portfolio - (_layout.scss)
 *
 * ------------------------------------------------------------------- 
 */
#portfolio {
  background: #ffffff;
  padding-top: 12rem;
  padding-bottom: 12rem;
}
#portfolio .folio-item {
  padding: 0;
  position: relative;
  overflow: hidden;
}
#portfolio .folio-item img {
  vertical-align: middle;
  -moz-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
  -webkit-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
}

#portfolio .overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: transparent;
  -moz-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
  -webkit-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
}

#portfolio .folio-item-table {
  display: table;
  width: 100%;
  height: 100%;
}
#portfolio .folio-item-cell {
  display: table-cell;
  vertical-align: middle;
  text-align: center;
  -moz-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
  -webkit-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
  position: relative;
  left: -100%;
}

#portfolio .folio-title {
  color: #ffffff;
  font-size: 3.3rem;
  padding: 0 3rem;
  margin-bottom: 0;
}
#portfolio .folio-types {
  margin: 0;
  padding: 0;
  text-transform: uppercase;
  font-family: "poppins-regular", sans-serif;
  font-size: 1.2rem;
  letter-spacing: 0.1rem;
  color: rgba(255, 255, 255, 0.6);
}
#portfolio .folio-item:hover .overlay {
  background: rgba(0, 0, 0, 0.8);
}
#portfolio .folio-item:hover .folio-item-cell {
  left: 0;
}
#portfolio .folio-item:hover img {
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

/**
 * responsive:
 * portfolio
 * ------------------------------------------------------------------- 
 */
@media only screen and (max-width: 1024px) {
  #portfolio .folio-title {
    font-size: 3.1rem;
  }
}
@media only screen and (max-width: 768px) {
  #portfolio .folio-title {
    font-size: 2.5rem;
  }
}
@media only screen and (max-width: 400px) {
  #portfolio .folio-title {
    font-size: 2.2rem;
  }
}

/**
 * Popup Modal - (_layout.scss)
 * ------------------------------------------------------------------
 */
.popup-modal {
  max-width: 550px;
  background: #ffffff;
  position: relative;
  margin: 0 auto;
}
.popup-modal .media {
  position: relative;
}
.popup-modal img {
  vertical-align: bottom;
}
.popup-modal .description-box {
  padding: 1.8rem 3.6rem 3rem;
}
.popup-modal .description-box h4 {
  font-family: "poppins-bold", sans-serif;
  font-size: 1.5rem;
  line-height: 2.4rem;
  margin-bottom: 0.6rem;
}
.popup-modal .description-box p {
  font-family: "poppins-regular", sans-serif;
  font-size: 1.4rem;
  line-height: 2.4rem;
  margin-bottom: 12px;
}
.popup-modal .categories {
  font-family: "poppins-bold", sans-serif;
  font-size: 1.1rem;
  line-height: 1.8rem;
  text-transform: uppercase;
  letter-spacing: 0.1rem;
  display: block;
  text-align: left;
  color: rgba(0, 0, 0, 0.5);
}
.popup-modal .link-box {
  width: 100%;
  overflow: hidden;
  background: #000000;
}
.popup-modal .link-box a {
  font-family: "poppins-bold", sans-serif;
  font-size: 1.2rem;
  line-height: 6rem;
  color: #ffffff;
  text-transform: uppercase;
  letter-spacing: 3px;
  cursor: pointer;
  display: block;
  text-align: center;
  float: left;
  width: 50%;
  -moz-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  -webkit-transition: all 0.3s ease-in-out;
  -ms-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}
.popup-modal .link-box a:first-child {
  border-right: 1px solid rgba(200, 200, 200, 0.1);
}
.popup-modal .link-box a:hover {
  background: #cc005f;
  border: none;
}
@media only screen and (max-width: 600px) {
  .popup-modal {
    width: auto;
    margin: 0 20px;
  }
}

/**
 * transition effect for modal popup - (_layout.scss)
 * ------------------------------------------------------------------ 
 */

/* overlay at start */
.mfp-fade.mfp-bg {
  opacity: 0;
  -moz-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  -webkit-transition: all 0.3s ease-in-out;
  -ms-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

/* overlay animate in */
.mfp-fade.mfp-bg.mfp-ready {
  opacity: 0.9;
}

/* overlay animate out */
.mfp-fade.mfp-bg.mfp-removing {
  opacity: 0;
}
/* ... */

